# phy_teacher_ros2

./: README.md
phy_teacher_core/: CMakeLists.txt  package.xml
phy_teacher_core/include/: phy_teacher.hpp
phy_teacher_core/include/ecvxcone/: base.h  blas.h  cpg_solve.h  cpg_workspace.h  cvxopt.h  lapack.h  misc.h  solver.h
phy_teacher_core/launch/: phy_teacher_launch.py
phy_teacher_core/src/: controller_node.cpp  phy_teacher.cpp
phy_teacher_core/src/ecvxcone/: base.c  blas.c  cpg_solve.c  cpg_workspace.c  debug.c  dense.c  lapack.c  misc.c  solver.c  solver_utils.c  sparse.c
phy_teacher_core/tests/: control_gain_listener.cpp  mock_publisher.cpp
phy_teacher_interfaces/: CMakeLists.txt  package.xml
phy_teacher_interfaces/msg/: ControlGains.msg  TrackingError.msg
